kyverno/Audit/destinationrule-enforce-tls-hosts-host-subnets.yaml
# https://kyverno.io/policies/istio/enforce-tls-hosts-host-subnets/enforce-tls-hosts-host-subnets/

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: destinationrule-enforce-tls-hosts-host-subnets
  annotations:
    policies.kyverno.io/category: Security
    policies.kyverno.io/subject: DestinationRule
    policies.kyverno.io/description: >- 
      Once a routing decision has been made, a DestinationRule can be used to define how traffic
      should be sent to another service. The trafficPolicy object can control how TLS is handled
      to the destination host. This policy enforces that the TLS mode cannot be set to a value
      of `DISABLE`.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: destrule
    match:
      any:
      - resources:
          kinds:
          - DestinationRule
    validate:
      message: "TLS may not be disabled for the trafficPolicy in any host."
      pattern:
        =(spec):
          =(trafficPolicy):
            =(tls):
              =(mode): "!DISABLE"
