kyverno/Audit/namespace-istio-injection.yml
# https://habr.com/ru/articles/893938/#:~:text=%D0%BE%D1%82%20%D1%80%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D1%85%20%D0%BD%D0%B0%D0%B3%D1%80%D1%83%D0%B7%D0%BE%D0%BA.-,3.%20%D0%9E%D0%B1%D1%85%D0%BE%D0%B4%20sidecar%2D%D0%BF%D1%80%D0%BE%D0%BA%D1%81%D0%B8%20(%D0%B0%D1%82%D0%B0%D0%BA%D0%B8%20%D0%BD%D0%B0%20data%20plane),-Service%20mesh%20%D0%BF%D0%BE%D0%BB%D0%B0%D0%B3%D0%B0%D0%B5%D1%82%D1%81%D1%8F

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: namespace-istio-injection
  annotations:
    policies.kyverno.io/category: Security
    policies.kyverno.io/subject: PeerAuthentication
    policies.kyverno.io/description: >
      Ensures that all newly created Namespaces have the label
      `istio-injection: enabled`, which is necessary for Istio to
      automatically inject sidecar proxies into workloads within those
      Namespaces. 
spec:
  validationFailureAction: Audit
  background: true
  rules:
    # Правило для проверки Namespace
    - name: validate-namespace-istio-injection
      match:
        any:
        - resources:
            kinds:
              - Namespace
      validate:
        message: "Namespace must be labeled 'istio-injection: enabled'"
        pattern:
          metadata:
            labels:
              istio-injection: "enabled"
